[gd_scene load_steps=27 format=3 uid="uid://dfgjo62qtp7ik"]

[ext_resource type="Script" path="res://Boneco.gd" id="1_lwnu0"]
[ext_resource type="Texture2D" uid="uid://bwvougb3aqeco" path="res://Textures/character_sheet_outlined.png" id="2_giy45"]
[ext_resource type="AudioStream" uid="uid://bievcn1rujf3a" path="res://Sfx/hitHurt.wav" id="3_oy5h8"]
[ext_resource type="AudioStream" uid="uid://cnkr4odhk7hnc" path="res://Sfx/jump.wav" id="4_qsn86"]
[ext_resource type="AudioStream" uid="uid://vhh3vbcg08ed" path="res://Sfx/pickupCoin.wav" id="5_nflom"]
[ext_resource type="AudioStream" uid="uid://cleofxaa3rn0c" path="res://Sfx/step.wav" id="6_gqha6"]
[ext_resource type="AudioStream" uid="uid://c32lu80m5duyu" path="res://Sfx/blipSelect.wav" id="7_qw2n4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sucw"]
size = Vector2(8, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_crdf4"]
radius = 4.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5gswl"]
streams_count = 1
random_pitch = 1.3
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("3_oy5h8")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n0x34"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("4_qsn86")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7gqry"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("5_nflom")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wvcuf"]
streams_count = 1
random_pitch = 1.3
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("6_gqha6")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_ngcjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Step:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1loan"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_iq8bh"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_6lkd1"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nx85m"]
resource_name = "jump_left"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k6wrj"]
resource_name = "jump_right"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_84imj"]
resource_name = "walk_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Step:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aqjrc"]
resource_name = "walk_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Step:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xae6o"]
_data = {
"RESET": SubResource("Animation_ngcjn"),
"dead": SubResource("Animation_1loan"),
"fall": SubResource("Animation_iq8bh"),
"idle": SubResource("Animation_6lkd1"),
"jump_left": SubResource("Animation_nx85m"),
"jump_right": SubResource("Animation_k6wrj"),
"walk_left": SubResource("Animation_84imj"),
"walk_right": SubResource("Animation_aqjrc")
}

[sub_resource type="Curve" id="Curve_dkgru"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4bshg"]
curve = SubResource("Curve_dkgru")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gy4jj"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 6.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_max = 10.0
angle_max = 90.0
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_4bshg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_udo5d"]
streams_count = 1
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("7_qw2n4")
stream_0/weight = 1.0

[node name="Boneco" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource("1_lwnu0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_4sucw")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -2)
texture = ExtResource("2_giy45")
flip_h = true
hframes = 8

[node name="Camera2D" type="Camera2D" parent="."]
drag_vertical_enabled = true
drag_top_margin = 0.05
drag_bottom_margin = 0.05

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_mask = 508

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_crdf4")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_5gswl")

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_n0x34")

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_7gqry")

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wvcuf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xae6o")
}

[node name="Trail_particles" type="GPUParticles2D" parent="."]
position = Vector2(0, 5)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_gy4jj")

[node name="Checkpoint" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_udo5d")

[node name="Hat" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -4)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
